<resources>
    <string name="app_name">HoneyDo</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">Sign Up</string>

    <string-array name="tags">
        <item>School</item>
        <item>Work</item>
        <item>Chores</item>
    </string-array>

    <string name="label_name">Name</string>
    <string name="placeholder_username">Input username</string>
    <string name="label_email">Email</string>
    <string name="placeholder_email">Email</string>
    <string name="label_password">Password</string>
    <string name="placeholder_password">Input password</string>
    <string name="label_reenter_password">Reenter password</string>
    <string name="placeholder_reenter_password">Reenter password</string>

    <string name="label_test_server">Hit server!</string>
    <string name="message_specify_email_password">You must specify email and password.</string>

    <string name="message_wrong_credentials">Wrong email or password.</string>
    <string name="message_communication_problem">Communication problems.</string>
    <string name="message_endpoint_200">Endpoint alive and OK.</string>
    <string name="message_unexpected_response">Unexpected response.</string>
    <string name="message_invalid_request">Invalid request.</string>
    <string name="message_account_exists">This account already exists.</string>

    <!-- time and date formats -->
    <string name="standard_date_format">MM-dd-yyyy</string>
    <string name="standard_time_format">hh:mm a</string>
    <string name="standard_time24_format">HH:mm a</string>


    <!-- SignUpActivity -->
    <string name="message_invalid_email">Invalid email.</string>
    <string name="message_invalid_username">Invalid username.</string>
    <string name="message_passwords_do_not_match">Passwords entered do not match.</string>

    <!-- Add/EditActivity -->
    <string name="message_invalid_name">Must provide name.</string>
    <string name="message_invalid_date">Invalid date.</string>
    <string name="message_invalid_time">Invalid time.</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="settings_mute_notif_title">Mute Notifications</string>
    <string name="settings_mute_notif_summary">Notifications will not appear</string>

    <string name="settings_about">About</string>

    <string name="settings_about_version_title">Version</string>
    <string name="settings_about_version_summary">2.3.0</string>
    <string name="settings_about_created_title">Created By</string>
    <string name="settings_about_created_summary">Aaron Chambers, David Cabrera, Nikos Chouvalis, Katie Curley, Mitchell Artin, Mark Yo</string>

    <string name="settings_delete_title">Delete Account</string>
    <string name="settings_delete_summary">Delete your account</string>

    <string name="label_tasks">Tasks</string>
    <string name="label_signup">Sign Up</string>
    <string name="label_submit">Submit</string>
    <string name="label_test_login">Test Login</string>
    <string name="title_add_task">Add Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="placeholder_input_task_name">Input new task name</string>
    <string name="label_description">Description</string>
    <string name="placeholder_input_description">Input a description for your task (optional)</string>
    <string name="label_tags">Tags</string>
    <string name="label_priority">Priority</string>
    <string name="placeholder_date_format">mm/dd/yyyy</string>
    <string name="placeholder_time_format">hh:mm am/pm</string>
    <string name="label_add">Add</string>
    <string name="label_edit">Edit</string>

    <string name="logo">logo</string>
    <string name="copyright">© 2018 HoneyDo ALL RIGHTS RESERVED</string>

    <string name="notification_channel_name">HoneyDo</string>
    <string name="notification_channel_description">Notification Channel for HoneyDo</string>
    <string name="notification_channel_id">HONEY-DO-NOTIFICATION</string>
</resources>
