<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="pref_mute"
        android:summary="@string/settings_mute_notif_summary"
        android:title="@string/settings_mute_notif_title" />
    <PreferenceScreen
        android:key="about_category_key"
        android:title="@string/settings_about"
        android:persistent="false">
        <Preference
            android:title="@string/settings_about_version_title"
            android:summary="@string/settings_about_version_summary"/>
        <Preference
            android:title="@string/settings_about_created_title"
            android:summary="@string/settings_about_created_summary"/>
    </PreferenceScreen>
</PreferenceScreen>